2022-06-01  G. Branden Robinson <g.branden.robinson@gmail.com>

	* configure.ac:
	* m4/groff.m4 (GROFF_APPDEFDIR_OPTION, GROFF_APPDEFDIR_DEFAULT,
	GROFF_APPDEFDIR_CHECK): Rename m4 macros and shell variable from
	"*appres*" to "*appdef*.  Update interpolation sites.

	* configure.ac:
	* m4/groff.m4 (GROFF_APPDEFDIR_CHECK): Further rename this...
	(GROFF_APPDEFDIR_NOTICE): ...to this, for consistency with other
	post-report output macros.

	* Makefile.am:
	* PROBLEMS:
	* doc/automake.mom:
	* src/devices/xditview/xditview.am: Update interpolation sites
	of `appresdir`.

	* Makefile.am:
	* src/devices/xditview/gxditview.1.man:
	* src/roff/groff/groff.1.man: Update interpolation sites of
	`APPRESDIR`.

	* NEWS: Add item.

2022-06-01  G. Branden Robinson <g.branden.robinson@gmail.com>

	* m4/groff.m4 (GROFF_X11, GROFF_UCHARDET): Drop redundant
	messages (which are easily overlooked amid the torrent of
	"checking" output anyway).  Discovery failures of X11 and the
	unchardet library are already parts of the configuration report
	at or near the end of output.

2022-06-01  G. Branden Robinson <g.branden.robinson@gmail.com>

	* m4/groff.m4 (GROFF_PNMTOPS_NOSETPAGE): Partially revert change
	from 21 May and document why in a comment.

2022-06-01  G. Branden Robinson <g.branden.robinson@gmail.com>

	* tmac/troffrc: Skip loading of "papersize.tmac" if not in troff
	mode.

	Fixes <https://savannah.gnu.org/bugs/?62238>.  Thanks to Bjarni
	Ingi Gislason for the report.

2022-05-31  G. Branden Robinson <g.branden.robinson@gmail.com>

	* configure.ac (AC_INIT): Add `--fallback` argument to
	`git-version-gen` to facilitate snapshot builds.

2022-05-31  G. Branden Robinson <g.branden.robinson@gmail.com>

	* configure.ac: Report use of "g" prefix for commands and macro
	package compatibility wrappers.
	* m4/groff.m4 (GROFF_G): Fix code style nits.  Update
	indentation to match recent practice.

2022-05-31  G. Branden Robinson <g.branden.robinson@gmail.com>
